fixed guitar strings covering whole screen

--- a/styles/about.css
+++ b/styles/about.css
@@ -3,10 +3,3 @@ body{
     color: white;
 }
 
-canvas{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
